force-app/main/default/objects/DocGen_Template__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category to organize templates.</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>