force-app/main/default/objects/DocGen_Template__c/fields/Custom_Margins__c.field-meta.xml
<CustomField>
    <fullName>Custom_Margins__c</fullName>
    <description
    >Custom PDF margins in inches as "Top,Right,Bottom,Left" (e.g., "0.5,0.75,0.5,0.75"). Only honored when Page_Margins__c = Custom. Single value (e.g., "0.75") applies to all four sides.</description>
    <label>Custom Margins (in)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>