force-app/main/default/objects/DocGen_Template__c/fields/Footer_Html__c.field-meta.xml
<CustomField>
    <fullName>Footer_Html__c</fullName>
    <description
    >Optional HTML fragment placed in the bottom page margin of HTML-type templates. Supports merge tags (including {PageNumber} and {TotalPages}).</description>
    <label>Footer HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>