force-app/main/default/objects/DocGen_Template__c/fields/Header_Html__c.field-meta.xml
<CustomField>
    <fullName>Header_Html__c</fullName>
    <description
    >Optional HTML fragment placed in the top page margin of HTML-type templates. Supports merge tags (including {PageNumber} and {TotalPages}).</description>
    <label>Header HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>