force-app/main/default/objects/DocGen_Template__c/fields/Lock_Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Lock_Output_Format__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the runner hides the output-format picker and forces the template's Output Format. Use for templates where the format is contractually fixed (PDF-only contracts, DOCX-only working drafts).</description>
    <inlineHelpText>Check to prevent users from overriding the output format at runtime.</inlineHelpText>
    <label>Lock Output Format</label>
    <type>Checkbox</type>
</CustomField>