force-app/main/default/objects/DocGen_Template__c/fields/Page_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Page_Orientation__c</fullName>
    <description>PDF page orientation. Landscape routes rendering through a Visualforce page so the page-size attributes are honored — Blob.toPdf alone always outputs portrait.</description>
    <label>Page Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portrait</fullName>
                <default>true</default>
                <label>Portrait</label>
            </value>
            <value>
                <fullName>Landscape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>