force-app/main/default/objects/DocGen_Template__c/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <description
    >PDF page size. Combined with Page_Orientation__c to drive canonical page dimensions in the renderer. Letter is the default; Legal and A4 supported. DOCX output is unaffected (Word honors source file dimensions).</description>
    <label>Page Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter</fullName>
                <default>true</default>
                <label>Letter (8.5 x 11 in)</label>
            </value>
            <value>
                <fullName>Legal</fullName>
                <label>Legal (8.5 x 14 in)</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>A4 (210 x 297 mm)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>