force-app/main/default/objects/DocGen_Template__c/fields/Query_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Query_Metadata__c</fullName>
    <description>Stores the JSON configuration of the Query Builder UI.</description>
    <label>Query Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>