force-app/main/default/objects/DocGen_Template__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Explicit sort position for templates in the runner picker. Lower numbers appear higher in the list. Templates with no Sort Order fall to the end and then sort by Is Default DESC, Name ASC.</description>
    <inlineHelpText>Optional. Lower numbers appear higher. Blank = sort by default-first then name.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>