force-app/main/default/objects/DocGen_Template__c/fields/Specific_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Specific_Record_Ids__c</fullName>
    <description
    >Comma-separated list of 18-character record Ids. When set, this template only appears in the runner / signature sender / Flow when running on one of the listed records. Empty = template applies to all records of the configured Base Object. Any-of semantics — a template with three Ids appears when running on any of the three.</description>
    <inlineHelpText
    >Comma-separated record Ids (18 chars each) this template applies to. Leave blank to apply to all records.</inlineHelpText>
    <label>Specific Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>